--- a/src/app/pages/budgeting-page/budgeting-page.component.html
+++ b/src/app/pages/budgeting-page/budgeting-page.component.html
@@ -9,7 +9,7 @@
       <md-icon id="left-nav-toggle" (click)="leftnav.toggle()">insert_chart</md-icon>
       <span class="example-spacer"></span>
       <md-icon (click)="previousMonth()" class="previous-month-button">chevron_left</md-icon> 
-      <h1>{{selectedMonthAndYear$.fullMonth}} {{selectedMonthAndYear$.year}} {{selectedBudgetName | async}}</h1>
+      <h1>{{selectedMonthAndYear.fullMonth}} {{selectedMonthAndYear.year}} {{selectedBudgetName | async}}</h1>
       <md-icon (click)="nextMonth()"  class="next-month-button">chevron_right</md-icon>
       <md-icon id="right-nav-toggle" (click)="rightnav.toggle()">menu</md-icon>
     </md-toolbar>
