--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,22 @@ body, yb-app, yb-budgeting-page, yb-budgeting-page>div, md-sidenav-container {
 body {
   margin: 0;
 }
+
+
+.nav-bar {
+  min-height: 56px;
+  max-width: 100%;
+  background-color: rgb(72,138,255);
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  padding-left: 14px;
+}
+
+.fab-bottom-right.mat-fab {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
