--- a/src/styles.css
+++ b/src/styles.css
@@ -21,17 +21,28 @@ body {
   margin: 0;
 }
 
+.mat-list-item-content {
+  justify-content: space-between;
+}
 
-.nav-bar {
-  min-height: 56px;
-  max-width: 100%;
-  background-color: rgb(72,138,255);
-  color: white;
-  font-size: 1.2rem;
-  font-weight: bold;
+.list-item-button {
+  height: 100%;
+  width: 36px;
   display: flex;
-  align-items: center;
-  padding-left: 14px;
+  justify-content: center;
+  align-items: center;  
+}
+
+.warning {
+  background-color: red;
+  color: white;
+}
+
+.mat-list-item-content > span {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  line-height: 46px;  
 }
 
 .fab-bottom-right.mat-fab {
