--- a/src/app/components/new-category/new-category.html
+++ b/src/app/components/new-category/new-category.html
@@ -1,7 +1,7 @@
-<div>
+<!-- <div>
   <md-input-container>
     <input mdInput [(ngModel)]="name" placeholder="New Category Name" (keypress)="onKeyPress($event)" class="new-category-name">
   </md-input-container>
 
   <md-icon class="add-new-category" (click)="addCategory()">add_box</md-icon>
-</div>
+</div> -->
