upgrade to ngrx 4

--- a/src/app/pages/budgeting-page/budgeting-page-main/budgeting-page-main.component.html
+++ b/src/app/pages/budgeting-page/budgeting-page-main/budgeting-page-main.component.html
@@ -1,9 +1,9 @@
 <yb-category *ngFor="let cat of categories$ | async" 
   [categoryName]="cat.name" 
-  [categoryId]="cat.id" 
-  [total]="cat.amount"
-  [transactions]="cat.transactions" 
-  [selected]="cat.selected"
+  [categoryId]="" 
+  [total]=""
+  [transactions]="" 
+  [selected]=""
   (add)="addTransaction($event)" 
   (removeTransaction)="removeTransaction($event)"
   (removeCategory)="removeCategory($event)"  
