get the budgeting page to render

--- a/src/app/pages/budgeting-page/budgeting-page.component.html
+++ b/src/app/pages/budgeting-page/budgeting-page.component.html
@@ -9,11 +9,20 @@
 </mat-toolbar>
 
 <mat-list>
-  <div *ngFor="let budget of budgets$ | async">
+  <div *ngFor="let category of categories$ | async">
     <mat-list-item>
-      <span (click)="openBudget(budget.id)">{{budget.name}}</span>
-      <div class="list-item-button warning" (click)="deleteBudget(budget.id)">
-        <mat-icon>delete</mat-icon>
+
+      <span (click)="addTransaction(category.name)">
+        <mat-icon>{{category.icon}}</mat-icon>
+        {{category.name}} 
+        <mat-chip-list>
+          <mat-chip color="primary" selected="true">{{category.amount | currency:'USD':true:'1.2-2'}}</mat-chip>
+        </mat-chip-list>                  
+      </span>
+
+
+      <div class="list-item-button" (click)="viewTransactionList(category.name)">
+        <mat-icon>view_list</mat-icon>
       </div>
     </mat-list-item>
     <mat-divider></mat-divider>
