setup working back buttons for all pages

--- a/src/app/pages/budgeting-page/budgeting-page.component.html
+++ b/src/app/pages/budgeting-page/budgeting-page.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <mat-icon>arrow_back</mat-icon>
+  <mat-icon (click)="back()">arrow_back</mat-icon>
   <h1>{{selectedBudgetName | async}}</h1>
 </mat-toolbar>
 <mat-toolbar>
