--- a/src/app/pages/add-transaction-page/add-transaction-page.component.html
+++ b/src/app/pages/add-transaction-page/add-transaction-page.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-  <span>Add Transaction</span>
+  <mat-icon (click)="back()">arrow_back</mat-icon>
+  <h1>Add Transaction</h1>
 </mat-toolbar>
 
 <form [formGroup]="" (ngSubmit)="addTransaction()">
