--- a/src/app/pages/transaction-list-page/transaction-list-page.component.html
+++ b/src/app/pages/transaction-list-page/transaction-list-page.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
-  <span>Transaction List</span>
+  <mat-icon (click)="back()">arrow_back</mat-icon>
+  <h1>Transaction List</h1>
 </mat-toolbar>
-
 <mat-list>
   <div *ngFor="let trans of transactions$ | async">
     <mat-list-item>
