Use the finger icon when hovering over stuff

--- a/src/app/pages/create-budget-page/create-budget-page.component.html
+++ b/src/app/pages/create-budget-page/create-budget-page.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <mat-icon (click)="manageBudgets()">arrow_back</mat-icon>
+  <mat-icon (click)="manageBudgets()" class="arrow-button">arrow_back</mat-icon>
   <span>Add New Budget</span>
 </mat-toolbar>
 
