--- a/src/app/pages/transaction-list-page/transaction-list-page.component.html
+++ b/src/app/pages/transaction-list-page/transaction-list-page.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <mat-icon (click)="back()">arrow_back</mat-icon>
+  <mat-icon (click)="back()" class="arrow-button">arrow_back</mat-icon>
   <h1>Transaction List</h1>
 </mat-toolbar>
 <mat-list>
