--- a/src/app/pages/budgeting-page/budgeting-page.component.html
+++ b/src/app/pages/budgeting-page/budgeting-page.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar color="primary">
-  <mat-icon (click)="back()">arrow_back</mat-icon>
+  <mat-icon (click)="back()" class="arrow-button">arrow_back</mat-icon>
   <h1>{{selectedBudgetName | async}}</h1>
 </mat-toolbar>
 <mat-toolbar>
-  <mat-icon (click)="previousMonth()">arrow_back</mat-icon>
+  <mat-icon (click)="previousMonth()" class="arrow-button">arrow_back</mat-icon>
   <h2>{{selectedMonthAndYear.fullMonth}} {{selectedMonthAndYear.year}}</h2>
-  <mat-icon (click)="nextMonth()">arrow_forward</mat-icon>
+  <mat-icon (click)="nextMonth()" class="arrow-button">arrow_forward</mat-icon>
 </mat-toolbar>
 
 <mat-list>
