--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;  
+  cursor: pointer;
 }
 
 .warning {
@@ -43,10 +44,16 @@ body {
   width: 100%;
   height: 100%;
   line-height: 46px;  
+  cursor: pointer;
 }
 
 .fab-bottom-right.mat-fab {
   position: absolute;
   right: 10px;
   bottom: 10px;
+  cursor: pointer;
+}
+
+.arrow-button {
+  cursor: pointer;
 }
