rename create-budget route to add-budget to be more consistent with the naming of create vs add in the application.

--- a/src/app/pages/budget-list-page/budget-list-page.component.html
+++ b/src/app/pages/budget-list-page/budget-list-page.component.html
@@ -13,4 +13,4 @@
   </div>
 </mat-list>
 
-<a mat-fab id="create-budget" class="fab-bottom-right" routerLink="/create-budget"><mat-icon>add</mat-icon></a>
+<a mat-fab id="add-budget" class="fab-bottom-right" routerLink="/add-budget"><mat-icon>add</mat-icon></a>
